--- a/Public/src/scss/utilities/_spacing.scss
+++ b/Public/src/scss/utilities/_spacing.scss
@@ -45,6 +45,7 @@
 .align-self-baseline { align-self: baseline; }
 
 .flex-1 { flex: 1; }
+.flex-2 { flex: 2; }
 .flex-auto { flex: auto; }
 .flex-initial { flex: initial; }
 .flex-none { flex: none; }
